# Speech-To-Text-Bot

./: .gitignore  Cargo.toml  DEVELOPMENT.md  PRIVACY.md  README.md  TERMS.md
.cargo/: config.toml
src/: handle_message_ctx.rs  handle_slash.rs  main.rs  metrics_server.rs  model_data.rs
src/utils/: fetch_url.rs  mod.rs  speech_to_text.rs  transcode_audio.rs  transcode_video.rs  wav_to_integer_mono.rs
