[package]
name = "discordstt"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
authors = ["Tricked-dev <tricked@tricked.pro>"]
default-run = "discordstt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
anyhow = "1.0.70"
autometrics = { version = "0.3.3", default-features = false, features = ["once_cell", "prometheus", "prometheus-exporter"] }
hound = "3.5.0"
http = "0.2.9"
http-body-util = "0.1.0-rc.2"
hyper = { version = "1.0.0-rc.3", features = ["http1", "server", "http-body-util"] }
once_cell = { version = "1.17.1", features = ["parking_lot"] }
reqwest = "0.11.16"
serenity = { version = "0.11.5", features = [
    "reqwest",
    "builder",
    "flate2",
    "extras",
    "utils",
    "http",
    "tokio",
    "gateway",
    "rustls_backend",
    "async-tungstenite",
    "parking_lot",
    "model",
    "dashmap",
    "client",
    "cache"
], default-features = false }
tokio = { version = "1.27.0", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = [
    "parking_lot",
    "once_cell",
    "tracing",
    "env-filter"
] }
whisper-rs = "0.5.0"
